Révision styles liens et typo

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8" />
+    <!-- tricky ? pour Arial Black font -->
+    <link href="http://fr.allfont.net/allfont.css?fonts=arial-black" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="css/styles.css" />
     <title>Free Style - Home</title>
 </head>
@@ -12,7 +14,7 @@
 
 
         <!-- CONTENT
-        ======================================================================== -->
+        ==================================================================== -->
         <div id="content">
 
             <div class="section">
